[gd_scene load_steps=7 format=2]

[ext_resource path="res://start-assets/bumper.png" type="Texture" id=1]
[ext_resource path="res://ProjectileEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 40.05

[sub_resource type="CircleShape2D" id=2]
radius = 328.002

[sub_resource type="CircleShape2D" id=3]
radius = 26.0

[sub_resource type="CircleShape2D" id=4]
radius = 27.0

[node name="ProjectileEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="EnemyShooter" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="Arm" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Hand" type="Node2D" parent="Arm"]
position = Vector2( 40, 0 )

[node name="PlayerZone" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="areabox" type="CollisionShape2D" parent="PlayerZone"]
shape = SubResource( 2 )

[node name="AttackHit" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="hitbox" type="CollisionShape2D" parent="AttackHit"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1, 0.8 )
shape = SubResource( 3 )

[node name="EnemyHit" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="hitbox2" type="CollisionShape2D" parent="EnemyHit"]
modulate = Color( 0.254902, 1, 0.0156863, 1 )
scale = Vector2( 1, 0.8 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="PlayerZone" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="AttackHit" to="." method="_on_AttackHit_area_entered"]
[connection signal="body_entered" from="EnemyHit" to="." method="_on_EnemyHit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
